Complete MVP with frontend and backend

--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "discount-marketplace",
   "version": "1.0.0",
-  "description": "Backend server for Discount Marketplace MVP",
+  "description": "Discount-driven B2C marketplace backend with Express, PostgreSQL, JWT, and M-Pesa integration",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "setup-db": "node scripts/setup-db.js"
+    "test": "echo \"No tests yet\" && exit 0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Brian Karanja",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.22.1",
-    "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1",
-    "pg": "^8.16.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.0.3"
   },
-  "type": "commonjs"
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  }
 }
